Artículos - Fotos incorporar UI maquetación

--- a/public/assets/dropify/css/frames.css
+++ b/public/assets/dropify/css/frames.css
@@ -2,7 +2,7 @@
 https://www.baulphp.com/ajustar-una-imagen-a-un-div-ejemplo-completo/
 https://www.baulphp.com/download/imagenes-responsive-en-css3-y-html5/
 */
-
+/*
 .img{
     margin:10px auto;
     border-radius:5px;
@@ -18,3 +18,4 @@ https://www.baulphp.com/download/imagenes-responsive-en-css3-y-html5/
   .img img{
     width: 100%;
   }
+*/
